# MHFormer

./: .gitignore  requirements.txt
cpp/: CMakeLists.txt  background_matting.cpp  background_matting.h  detect.cpp  detect_tmp.cpp  dll_utils.cpp  dll_utils.h  libdetect.cpp  libdetect.h  libplot.cpp  libplot.h  main.cpp  mhformer.cpp  mhformer.h  mhformer_proxy.cpp  mhformer_proxy.h  mhformer_utils.cpp  mhformer_utils.h  mocap_mp_proxy_linux.cpp  mocap_mp_proxy_linux.h  plot_utils.cpp  plot_utils.h  readme.txt  timer.hpp
cpp/load_shared_lib/: CMakeLists.txt  bg_matting.hpp  detect.cpp  readme.txt
cpp/shared_lib/: CMakeCache.txt  CMakeLists.txt  Makefile  background_matting.cpp  background_matting.h  cmake_install.cmake  libbg_matting.cpp  libbg_matting.h  libmhformer.cc  libmhformer.cpp  libmhformer.h  mhformer.cpp  mhformer.h  mhformer_utils.cpp  mhformer_utils.h  readme.txt
demo/: detect.py  detect_pose.py  libmhformer.py  math_utils.py  plot_utils.py  readme.txt  skeleton_utils.py  tools  vis.py  vis_ori.py
demo/lib/: preprocess.py
demo/lib/sort/: sort.py
demo/output/TurnBody/input_2D/: keypoints.npz
demo/output/TurnBody/output_3D/: output_keypoints_3d.npz
demo/output/sample_video/output_3D/: output_keypoints_3d.npz
demo/output/sample_video_azim0/output_3D/: output_keypoints_3d.npz
demo/output/sample_video_azim0_frames27/output_3D/: output_keypoints_3d.npz
demo/output/sample_video_azim0_frames81/input_2D/: keypoints.npz
demo/output/sample_video_azim0_frames81/output_3D/: output_keypoints_3d.npz
demo/output/sample_video_azim70/output_3D/: output_keypoints_3d.npz
model/module/: trans_hypothesis.py  trans_hypothesis_ori.py
